<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryAlt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    tools:context=".ui.Inicio">


<androidx.cardview.widget.CardView
    android:id="@+id/cardV_acceso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="20dp"
    android:elevation="15dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/tv_titulo_acceso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/label_acceso_estado"></TextView>
    <Button
        android:id="@+id/btn_acceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titulo_acceso"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/colorVerde"
        android:textColor="#fff"
        android:drawableRight="@drawable/ic_lock_open"
        android:padding="10dp"
        android:width="120dp"
        android:text="Abrir"></Button>
    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/colorRojo"
        android:layout_below="@+id/tv_titulo_acceso"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textColor="#fff"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:text="Cerrar"></Button>
</RelativeLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardV_acceso"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:elevation="6dp"
        app:cardCornerRadius="20dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications"
                android:layout_toLeftOf="@+id/tv_notificaciones"
                android:scaleY="1.2"
                android:scaleX="1.2"
                ></ImageView>
            <TextView
                android:id="@+id/tv_notificaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Notificaciones"
                android:layout_marginLeft="5dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp">
            </TextView>
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_below="@+id/tv_notificaciones"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:lottie_rawRes="@raw/loading_lottie"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>
            <TextView
                android:id="@+id/tv_notificaciones_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:text="Sin notificaciones"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/animationView"></TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:visibility="gone"
                android:layout_marginEnd="5dp"
                android:layout_below="@+id/tv_notificaciones"
                android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>
            <Button
                android:id="@+id/btn_ver_mas"
                android:layout_below="@+id/recyclerV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ver_mas"
                android:visibility="gone"
                android:background="@drawable/btn_background"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_remove_red_eye"
                android:textColor="#fff"
                android:layout_centerHorizontal="true"
                ></Button>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>